--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -1,6 +1,6 @@
 \chapter{Experimental Verification}
 \label{chap:experiment}
-Using the knowledge gained by the simulation, an experiment at the beamline 3 of the SACLA FEL is performed. The experiment consisted of three parts: First, reproducing the results of Nakumura et al. and imaging projection of the focal volume of the FEL by using metal foils as samples, performing a measurement of the K$\alpha$  fluorescence and an reconstruction in the small angle regime. Second, moving to a smaller length scale and trying to image nanoparticles. And Third, leaving the small angle regime and recording the fluorescence of a single crystal and perform a reciprocal space reconstruction.
+Using the knowledge gained by the simulation, an experiment at the beamline 3 of the SACLA FEL is performed. The experiment consists of three parts: First, reproducing the results of Nakumura et al. and imaging projection of the focal volume of the FEL by using metal foils as samples, performing a measurement of the K$\alpha$  fluorescence and an reconstruction in the small angle regime. Second, moving to a smaller length scale and trying to image nanoparticles. And Third, leaving the small angle regime and recording the fluorescence of a single crystal and perform a reciprocal space reconstruction.
 \section{Sample Preparation and Characterization}
 As a nanoparticle sample, spherical iron oxide nanoparticles are chosen for their commercial availability in high quality. To improve the number of detected fluorescence photons per FEL shot, a preparation allowing (statistically) multiple particles inside the focus is chosen. This greatly reduces the possibility of having shots without any particles inside the focus as well.
 
@@ -134,7 +134,7 @@ The FEL provides approximately 10\,fs long hard X-ray pulse with $\approx 10^{11
 The sample is mounted in a 45° angle to the beam on a stack of two rotational/two translational/two rotational/three translational stage to allow scanning of the sample, to ensure perpendicularly of the scanning directions to the beam to stay within the Rayleigh length (approx. 100\,um horizontal/200\,um vertical) while also ensuring a parallel alignment of the sample surface to one of the detectors. Overall, two MPCCD detectors are used: A dual detector with two tiles, each 512x1024 pixels perpendicular to the FEL beam in a distance of 1\,m and a "Short Working Distance" octal detector, consisting of eight 512x1024 tiles, parallel to the sample surface in a distance $d_{octal}=$14-50\,cm. To suppress absorption and more importantly, air scattering, a vacuum pipe with Kapton windows is installed in between the sample and the dual detector.
 An L-shaped aluminum plate is installed to reduce stray light as well as to allow mounting of the beamstop and filters between sample and the detectors.
 
-The samples are scanned with a mean step size of 20\,um in horizontal direction (fast scanning direction) and 20\,um in vertical direction.between shots. The step size was chosen based on the crater size visible with an optical microscope of approximately 5-10\,um for the samples and energies used in the experiment.
+The samples are scanned with a mean step size of 20\,um in horizontal direction (fast scanning direction) and 20\,um in vertical direction.between shots. The step size is chosen based on the crater size visible with an optical microscope of approximately 5-10\,um for the samples and energies used in the experiment.
 
 \begin{figure}
 	\centering
@@ -197,7 +197,7 @@ Masks for both detectors are created based on the standard deviation in dark ima
 \end{figure}
 
 \paragraph{Detector Artifacts}
-During the experiment, an unnoticed failure of the electronics of the octal detector has occurred, manifesting as periodic noise on most of the detector tiles at a much higher level than expected (see \fref{fig:octalissue} for an illustration). Not all columns of a tile are affected (in contrast to common-mode effects commonly encountered with different detectors). As the overall affected area of the detector is substantial and the noise leaks through the photon counting scheme by slightly influencing the probability of a pixel being considered a photon hit, causing correlations and therefore artifacts in the reconstruction in one direction, a correction was applied to the affected columns of affected tiles of the detector. For the correction, affected columns are first identified by filtering on the Fourier transform, neighboring effected columns are considered as a block and the medians over those block is calculated and subtracted. This scheme is chosen instead of the more commonly used portwise common modes due to the uneven strength of the artifact (see \fref{fig:app_correction} for a comparison). Using this correction reduces the artifact, but does not completely remove it. As the remaining artifact in the reconstructions is limited to low $q$ compared to the expected positions of the features of the samples and only two orthogonal lines, it can be masked out.
+During the experiment, an unnoticed failure of the electronics of the octal detector has occurred, manifesting as periodic noise on most of the detector tiles at a much higher level than expected (see \fref{fig:octalissue} for an illustration). Not all columns of a tile are affected (in contrast to common-mode effects commonly encountered with different detectors). As the overall affected area of the detector is substantial and the noise leaks through the photon counting scheme by slightly influencing the probability of a pixel being considered a photon hit, causing correlations and therefore artifacts in the reconstruction in one direction, a correction is applied to the affected columns of affected tiles of the detector. For the correction, affected columns are first identified by filtering on the Fourier transform, neighboring effected columns are considered as a block and the medians over those block is calculated and subtracted. This scheme is chosen instead of the more commonly used portwise common modes due to the uneven strength of the artifact (see \fref{fig:app_correction} for a comparison). Using this correction reduces the artifact, but does not completely remove it. As the remaining artifact in the reconstructions is limited to low $q$ compared to the expected positions of the features of the samples and only two orthogonal lines, it can be masked out.
 
 
 
@@ -252,7 +252,7 @@ Before doing the reconstruction, a final filtering pass is done on the images, k
 
 
 \paragraph{Crystal orientation}
-For determining the relative orientation of the crystal with regards to the detector, Kossel lines as described in \fref{sec:kossel} can be used.  A semi-automatic alignment program was developed (\fref{fig:kosselfit}) to aid with the procedure.
+For determining the relative orientation of the crystal with regards to the detector, Kossel lines as described in \fref{sec:kossel} can be used.  A semi-automatic alignment program has been developed (\fref{fig:kosselfit}) to aid with the procedure.
 
 For each sample, the images are split into sets of 5000 shots and (after filtering for hot pixels and cutting bellow a noise threshold of 2\,keV), the mean is taken. To better distinguish the Kossel lines from uniform fluorescence, a Gaussian blurred version ($\sigma$=20\, px) is subtracted (see \fref{fig:kosselgaasmean} for examples). The Kossel lines are identified visually and the local maxima in the 20x20\,px surrounding block of a selected Kossel line are considered as points on the Kossel line. A least-square regression is performed,
 
