--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -1,7 +1,7 @@
 \chapter{Simulations}
 \label{chap:simulation}
 To illustrate the working principle of IDI and to examine the Signal-to-Noise characteristics, the results of different simulations will be shown:\\
-First, it is assumed that the object to be imaged consists of discrete emitters, each emitting monochromatic spherical waves with a randomly chosen phase, and the speckle image on a pixelated detector was simulated by the addition of scalar electric fields with random initial phase propagated to the detector and Poisson sampling in each pixel. In this time independent configuration, the speckle images of a single particle with randomly positioned emitters inside (approximating a single particle imaging setup), a focal volume filled with randomly positioned (non intersecting) hard spheres consisting of randomly positioned atoms (approximating, for example, many spherical nanoparticles imaged simultaneously) as well as a crystalline structure with emitters positioned within a lattice are simulated. In the first two cases, a small-angle regime was chosen, and the reconstruction was performed in 2D and as a 1D radial profile. For the crystalline structure, a realistic lattice constant in the same order of magnitude as the K$\alpha$ wavelength moves the reconstruction out of the small-angle regime, and a 3D reconstruction of the reciprocal space is performed. Additionally, in these simulations the effect of under-sampling is studied.\\
+First, it is assumed that the object to be imaged consists of discrete emitters, each emitting monochromatic spherical waves with a randomly chosen phase, and the speckle image on a pixelated detector is simulated by the addition of scalar electric fields with random initial phase propagated to the detector and Poisson sampling in each pixel. In this time independent configuration, the speckle images of a single particle with randomly positioned emitters inside (approximating a single particle imaging setup), a focal volume filled with randomly positioned (non intersecting) hard spheres consisting of randomly positioned atoms (approximating, for example, many spherical nanoparticles imaged simultaneously) as well as a crystalline structure with emitters positioned within a lattice are simulated. In the first two cases, a small-angle regime is chosen, and the reconstruction is performed in 2D and as a 1D radial profile. For the crystalline structure, a realistic lattice constant in the same order of magnitude as the K$\alpha$ wavelength moves the reconstruction out of the small-angle regime, and a 3D reconstruction of the reciprocal space is performed. Additionally, in these simulations the effect of under-sampling is studied.\\
 Secondly, to examine the influence of the finite fluorescence lifetime and pulse width, and the validity of approximating  this influence by the overlay of a discrete number of speckle images according to the estimated number of modes, a time-resolved simulation is performed.
 
 Ultimately, the results of these simulations are used to estimate the parameters for an experimental setup.
@@ -151,7 +151,7 @@ To evaluate the different approaches, for a grating with pitch 50\,nm, line widt
 
 \subsection{Detector Size and SNR}
 	
-	To asses the influence of the number of pixels of an detector on the SNR, a simulation for a 1\,um thick Copper foil in an 100\,nm FWHM focus is performed. The detector size was varied from 64x64 to 3072x3072 pixels and always placed at the same distance of 1\,m, keeping the mean photon count per pixel constant. The number of correlation averaged over in the reconstruction increases linear with the number of pixels. For the SNR calculations, the signal is defined as peak intensity, the noise as the standard deviation over independent simulations.  As show in \fref{fig:SNRdetsize}, under these conditions, the SNR is proportional to the square root of the number of pixels of the detector. 
+	To asses the influence of the number of pixels of an detector on the SNR, a simulation for a 1\,um thick Copper foil in an 100\,nm FWHM focus is performed. The detector size is varied from 64x64 to 3072x3072 pixels and always placed at the same distance of 1\,m, keeping the mean photon count per pixel constant. The number of correlation averaged over in the reconstruction increases linear with the number of pixels. For the SNR calculations, the signal is defined as peak intensity, the noise as the standard deviation over independent simulations.  As show in \fref{fig:SNRdetsize}, under these conditions, the SNR is proportional to the square root of the number of pixels of the detector. 
 
 
 
