new engl abstract

--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -3,13 +3,21 @@
 		\textbf{Abstract}\vspace{12mm}
 	\end{Huge}
 \\
-Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  IDI could allow nanoscale resolution in three dimensions from few orientations, and thereby dramatically increases the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been meassured \cite{nakumura2020}.
+Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  IDI could allow nanoscale resolution in three dimensions from few orientations, and thereby dramatically increases the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
 
-In this work, major steps towards realizing the spatial resolution potential of the method by imaging smaller structures such as iron nanoparticles and 3d imaging of single crystals are made: A simulation-guided experiment performed at the SACLA FEL facility is presented, utilizing new experimental techniques as well as processing steps to overcome some of the limitations of IDI. 
-The results of the previously reported imaging of the focus could be reproduced. 
-Even though the goal of increasing the resolution could not yet be achieved, this work provides a basis for upcoming experiments.
+In the present work, steps towards realizing the spatial resolution potential are made: By developing a simulation framework, pulse duration, focal spot size, sample thickness, precise alignment of the detector, correction of misalignment, and handling of detector artifacts in the analysis are identified as relevant parameters for experimental success. A photon counting method with reduced artifacts in the correlations based on a single pixel maximum likelihood classification is presented.
 
- \vspace{1cm}
+These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation.
+Spherical iron nanoparticles deposited in polymer matrices are chosen as a nanometer-scaled sample to control the number of particles in the focal volume and characterized using electron microscopy and small-angle scattering, showing undesirable aggregation of the particles and reduction of the visibility of the structure factor. Thin gallium arsenide single crystal films are used to try to capture the Bragg peaks in the reconstruction. Analysis of Kossel lines reduced the misalignment not corrected in the crystal data analysis to $\pm$0.2°. 
+The results of the previously reported imaging of the focus could be reproduced by using iron and copper foils as a sample, measuring the focal width in horizontal direction as (240$\pm$20)\,nm estimating from the observed low contrast the number of modes overlaid in the measurement as >200.  Neither for the nanoparticle samples nor the single crystals any features of the structure factor could be recovered.
+
+Even though the goal of increasing the resolution could not be achieved, this work may provide a basis for upcoming experiments.
+
+
+
+
+
+\clearpage
  
  \begin{otherlanguage}{german}
  \begin{Huge}
