move discussion to experiment

--- a/Tex/discussion.tex
+++ b/Tex/discussion.tex
@@ -1,9 +1,8 @@
-\chapter{Discussion}
-The promise of IDI to allow three-dimensional, high resolution, element-specific imaging of nanoscale samples could not yet be fulfilled by the experimental implementation.
+\section{Discussion}
 
 The estimated number of independent modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the "optimal" value for unpolarized light ($M=2$), resulting in severely reduced contrast. The amplitude of the intensity correlations observed in the foil samples is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes. This might be the combination of a longer pulse length due to less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images) and the only partially by the regression corrected undersampling creating additional spatial modes. 
 
-The nanoparticle samples have much less prominent features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres, leading to an overestimation of the SNR in the simulations. The SAXS measurements give a reasonably good insight into the expected results of the IDI measurement of the same sample, but the latter will differ due to the iron specificity of the reconstructed structure factor and the smaller focal volume capturing less aggregates. Optimization of the preparation method leading to either higher concentrations of non-aggregating particles or to complete aggregation and the formation of quasi-crystals might lead to stronger features. Also, liquid injectors might be an option, even though, partially due to the tight focus, short Rayleigh length, and therefore difficult to achieve spatial overlap of the beam and sample, which would introduce additional complexity to the experimental setup.
+The nanoparticle samples have much less prominent features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres, leading to an overestimation of the SNR in the simulations. The SAXS measurements give a reasonably good insight into the expected results of the IDI measurement of the same sample, but the latter will differ due to the iron specificity of the reconstructed structure factor and the smaller focal volume capturing less aggregates. Optimization of the preparation method leading to either higher concentrations of non-aggregating particles or to complete aggregation and the formation of super-crystals might lead to stronger features. Also, liquid injectors might be an option, even though, partially due to the tight focus, short Rayleigh length, and therefore difficult to achieve spatial overlap of the beam and sample, which would introduce additional complexity to the experimental setup.
 
 The achieved alignment of the crystalline samples after determination of the mean orientation, and translational offset is still worse than the resolution of the reconstruction and the size of the expected Bragg peaks, resulting most likely in a reduction of the signal contrast through averaging of different pixel pairs not belonging to the same true $\vec{q}$. As the regression has only been performed on the average image variations over the scanning of the sample are not corrected. Mounting of the sample on the window might as well as the damage done during the measurement by the focused beam might have resulted in stress, slight bending of the thin glass stabilizing the crystal sheet, and stress in the lattice. Additionally, thermal motion of the gallium will have reduced the contrast. The energy of the excitation X-ray being close to the gallium K$_\alpha$ energy (to avoid excitation of the aresenic) makes it impossible to quantify or filter coherent scattering in the recorded data. Combined, these effects might have resulted in a reduction of the the peak intensity below the noise level. Furthermore, it has proved to be difficult to ensure that the orientation correction works as designed and the Bragg peaks would be reconstructed at the positions chosen as regions-of-interest. A non-comprehensive search using local maxima filter (as used to determine the Bragg peak positions in the simulated correlations for \fref{fig:accesiblebraggq}) has not lead to reasonable, i.e. symmetric and at the correct $\left|\vec{q}\right|$, candidates at other positions.
 
